{
  "version": 4,
  "terraform_version": "0.13.7",
  "serial": 17,
  "lineage": "fdfee32a-ba6b-a0b4-00d5-3595a9405e24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "hana-doitaesy-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:644435390668:loadbalancer/hana-doitaesy-lb",
            "availability_zones": [
              "sa-east-1a",
              "sa-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "hana-doitaesy-lb-14740165.sa-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:3000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "hana-doitaesy-lb",
            "idle_timeout": 60,
            "instances": [
              "i-05d260781d72c38b6",
              "i-0abf7c3e9ff595b6c"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              }
            ],
            "name": "hana-doitaesy-lb",
            "security_groups": [
              "sg-0afc74b998b345e26"
            ],
            "source_security_group": "644435390668/hana-doiteasy-lb-sg",
            "source_security_group_id": "sg-0afc74b998b345e26",
            "subnets": [
              "subnet-079cfce819b013ccd",
              "subnet-0d5bb536604aac8a5"
            ],
            "tags": {
              "Name": "hana-doiteasy-lb"
            },
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_instance.hana-app-1",
            "aws_instance.hana-app-2",
            "aws_security_group.hana-doiteasy-lb-sg",
            "aws_security_group.hana-doiteasy-sg",
            "aws_subnet.hana-doiteasy-subnet-1",
            "aws_subnet.hana-doiteasy-subnet-2",
            "aws_vpc.hana-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hana-app-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0056d4296b1120bc3",
            "arn": "arn:aws:ec2:sa-east-1:644435390668:instance/i-0abf7c3e9ff595b6c",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abf7c3e9ff595b6c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hana-sao-paulo-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e653d6551ed3812e",
            "private_dns": "ip-10-0-0-10.sa-east-1.compute.internal",
            "private_ip": "10.0.0.10",
            "public_ip": "15.228.226.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f580759208c1c673",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079cfce819b013ccd",
            "tags": {
              "Name": "hana-app-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b87ab79202d9421a"
            ]
          },
          "dependencies": [
            "aws_security_group.hana-doiteasy-sg",
            "aws_subnet.hana-doiteasy-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hana-app-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0056d4296b1120bc3",
            "arn": "arn:aws:ec2:sa-east-1:644435390668:instance/i-05d260781d72c38b6",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d260781d72c38b6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hana-sao-paulo-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2188a606c664e0b",
            "private_dns": "ip-10-0-1-12.sa-east-1.compute.internal",
            "private_ip": "10.0.1.12",
            "public_ip": "15.228.160.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-092aa1bbd721cf80e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5bb536604aac8a5",
            "tags": {
              "Name": "hana-app-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b87ab79202d9421a"
            ]
          },
          "dependencies": [
            "aws_security_group.hana-doiteasy-sg",
            "aws_subnet.hana-doiteasy-subnet-2",
            "aws_vpc.hana-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hana-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:644435390668:internet-gateway/igw-02585eb09598aba3a",
            "id": "igw-02585eb09598aba3a",
            "owner_id": "644435390668",
            "tags": {
              "Name": "hana-igw"
            },
            "vpc_id": "vpc-01b9eb4f69967dae4"
          },
          "dependencies": [
            "aws_vpc.hana-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "hana-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091b33a5a6e00ab0b",
            "original_route_table_id": "rtb-0015fe78fe4c0e1cd",
            "route_table_id": "rtb-0aee6dd68563ad215",
            "vpc_id": "vpc-01b9eb4f69967dae4"
          },
          "dependencies": [
            "aws_internet_gateway.hana-igw",
            "aws_route_table.hana-igw-route",
            "aws_vpc.hana-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hana-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aee6dd68563ad215",
            "owner_id": "644435390668",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02585eb09598aba3a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hana-igw-route"
            },
            "vpc_id": "vpc-01b9eb4f69967dae4"
          },
          "dependencies": [
            "aws_internet_gateway.hana-igw",
            "aws_vpc.hana-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hana-doiteasy-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:644435390668:security-group/sg-0afc74b998b345e26",
            "description": "hana-doiteasy-lb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afc74b998b345e26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hana-doiteasy-lb-sg",
            "name_prefix": "",
            "owner_id": "644435390668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hana-doiteasy-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b9eb4f69967dae4"
          },
          "dependencies": [
            "aws_vpc.hana-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hana-doiteasy-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:644435390668:security-group/sg-0b87ab79202d9421a",
            "description": "hana-doiteasy-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b87ab79202d9421a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from jump_server_sg",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow port 3000 from loadbalancer security group",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afc74b998b345e26"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "hana-doiteasy-sg",
            "name_prefix": "",
            "owner_id": "644435390668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hana-doiteasy-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b9eb4f69967dae4"
          },
          "dependencies": [
            "aws_security_group.hana-doiteasy-lb-sg",
            "aws_vpc.hana-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hana-doiteasy-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:644435390668:subnet/subnet-079cfce819b013ccd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-079cfce819b013ccd",
            "map_public_ip_on_launch": false,
            "owner_id": "644435390668",
            "tags": {
              "Name": "hana-doiteasy-subnet-1"
            },
            "vpc_id": "vpc-01b9eb4f69967dae4"
          },
          "dependencies": [
            "aws_vpc.hana-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hana-doiteasy-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:644435390668:subnet/subnet-0d5bb536604aac8a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.1.0/28",
            "id": "subnet-0d5bb536604aac8a5",
            "map_public_ip_on_launch": false,
            "owner_id": "644435390668",
            "tags": {
              "Name": "hana-doiteasy-subnet-2"
            },
            "vpc_id": "vpc-01b9eb4f69967dae4"
          },
          "dependencies": [
            "aws_vpc.hana-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hana-vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:644435390668:vpc/vpc-01b9eb4f69967dae4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c16e5e8ce0dbed7c",
            "default_route_table_id": "rtb-0aee6dd68563ad215",
            "default_security_group_id": "sg-0c98bbcd6aff32dee",
            "dhcp_options_id": "dopt-72aa1615",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01b9eb4f69967dae4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aee6dd68563ad215",
            "owner_id": "644435390668",
            "tags": {
              "Name": "hana-vpc-1"
            }
          }
        }
      ]
    }
  ]
}